--- a/app/(admin)/adminGlobals.css
+++ b/app/(admin)/adminGlobals.css
@@ -6,6 +6,7 @@
   --foreground: #190b04;
   --background: #f9eed7;
   --background2: #f1e9b3;
+  --backgroundLight: #fee9bb;
   --accent: #d13107;
 }
 
@@ -14,6 +15,7 @@
     --foreground: #f9eed7;
     --background: #190b04;
     --background2: #0b0502;
+    --backgroundLight: #281207;
     --accent: #d13107;
   }
 }
@@ -67,4 +69,10 @@ aside ul {
 }
 .btn {
   @apply max-w-fit bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded;
+}
+.myTable {
+  @apply grid gap-3 widget;
+}
+.cols3 {
+  @apply grid-cols-3;
 }
